# mohoo-client

./: Cargo.toml  Containerfile  Makefile  README.md  Rocket.toml  rust-toochain.toml
.cargo/: config.toml
libjsonc/: libjson-c.so.5
openwrt-sdk-22.03.3-ramips-mt7620_gcc-11.2.0_musl.Linux-x86_64/package/feeds/base/: bpftools  ksmbd  pcre  uboot-ramips
openwrt_config/etc/config/: firewall  network
openwrt_config/etc/rc.d/: S96dynamic-wireless  S97sta-ap-coex
src/: main.rs  operation.rs  test.rs  utils.rs
