[package]
name = "mohoo-cli"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wireguard-control = "1.5.0"
rust-uci = "0.1.5"
serde = "1.0.152"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0"
once_cell = "1.17.1"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
strip = true